audio recorder stuff

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <canvas id="render-canvas"></canvas>
     <script>
         require('./app/renderer.js');
+        require('./app/recorder.js');
     </script>
 </body>
 
